# ro-crate-rs

./: CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  MAINTAINERS.md  README.md  default_13792856207870283264_0_98417.profraw  default_7750337335181406407_0_98198.profraw  ro-crate-metadata.json
.github/workflows/: cli.yml  python.yml
benches/: create_and_write.rs  rdf_perf.rs  ro-crate-metadata.json
cli/: Cargo.toml  README.md
cli/src/: args.rs  main.rs
examples/: create_and_write.py  create_and_write.rs  rdf_export.rs  rdf_parse_example.rs  ro-crate-metadata.json
python/: Cargo.toml  README_py.md  pycrate.pyi  pyproject.toml  ro-crate-metadata.json
python/example/: example.py  ro-crate-metadata.json
python/src/: lib.rs  utils.rs
python/tests/unit/: test_pyapi.py
src/: lib.rs
src/ro_crate/: bagit.rs  constraints.rs  context.rs  contextual_entity.rs  convert.rs  data_entity.rs  graph_vector.rs  metadata_descriptor.rs  mod.rs  modify.rs  object_storage.rs  read.rs  rocrate.rs  root.rs  schema.rs  subcrate_resolution.rs  write.rs
src/ro_crate/rdf/: context.rs  convert.rs  error.rs  graph.rs  mod.rs  rdf_io.rs  resolver.rs
tests/: subcrate_tests.rs
tests/fixtures/: _ro-crate-metadata-broken-schema.json  _ro-crate-metadata-complex-context-1_2.json  _ro-crate-metadata-complex-context.json  _ro-crate-metadata-dynamic-1_2.json  _ro-crate-metadata-dynamic.json  _ro-crate-metadata-minimal-1_2.json  _ro-crate-metadata-minimal.json  _ro-crate-metadata-relative.json
tests/fixtures/unique_zips/: _ro-crate-metadata-minimal.json
tests/python/: requirements.txt  test_rdf_compat.py
