[package]
name = "ro-crate-rs"
version = "0.5.0"
edition = "2024"
repository = "https://github.com/intbio-ncl/ro-crate-rs"
authors = ["Matt Burridge <m.burridge1@newcastle.ac.uk>"]
autoexamples = false
license = "Apache-2.0"
description = "Library for creating, modifying and reading RO-Crates"
keywords = ["researchobject", "ro-crate", "ro", "metadata", "jsonld"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["cli"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4", "v7"] }
rand = "0.10.0"
url = "2.5"
zip = "8.1.0"
walkdir = "2"
reqwest = { version = "0.13.2", features = [
    "blocking",
    "json",
], default-features = false }
dirs = "6.0.0"
polars = { version = "0.53.0", features = ["parquet"] }
log = "0.4.29"
thiserror = "2.0.17"
sha1 = "0.10.6"
sha2 = "0.10.9"
hex = "0.4.3"
bytes = "1.11.1"
regex = "1.12.3"
oxrdf = "0.3"
oxrdfio = "0.2"

[lib]
name = "rocraters"
path = "src/lib.rs"
doctest = false

[features]
parquet = ["dep:polars"]
rdf = ["dep:oxrdf", "dep:oxrdfio"]
subcrate-resolution = [
    "dep:sha1",
    "dep:sha2",
    "dep:hex",
    "dep:bytes",
    "dep:regex",
]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
zip = { workspace = true }
walkdir = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
polars = { workspace = true, optional = true }
thiserror = { workspace = true }
log = { workspace = true }
sha1 = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
oxrdf = { workspace = true, optional = true }
oxrdfio = { workspace = true, optional = true }


[dev-dependencies]
tempfile = "3.24"
mockito = "1.7.1"
