[package]
name = "ro-crate-rs-cli"
version = "0.4.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ro-crate-rs = {path = "../"}
clap = { version = "4.4.16", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
json_to_table = "0.8.0"
tabled = "0.16.0"

[[bin]]
name = "rocraters"  
path = "src/main.rs"
