[package]
name = "ro-crate-rs-cli"
version = "0.4.9"
edition = "2021"
repository = "https://github.com/intbio-ncl/ro-crate-rs"
authors = ["Matt Burridge <m.burridge1@newcastle.ac.uk>"]
autoexamples = false
license = "Apache-2.0"
description = "Cli tool for creating, modifying, validating and reading RO-Crates"
keywords = ["researchobject","ro-crate","ro","metadata","jsonld"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ro-crate-rs = {path = "../", version = "0.4.8"}
clap = { version = "4.4.16", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
json_to_table = "0.8.0"
tabled = "0.16.0"

[[bin]]
name = "rocraters"  
path = "src/main.rs"
