[package]
name = "ro-crate-rs-cli"
version = "0.4.12"
edition = "2021"
repository = "https://github.com/intbio-ncl/ro-crate-rs"
authors = ["Matt Burridge <m.burridge1@newcastle.ac.uk>"]
autoexamples = false
license = "Apache-2.0"
description = "Cli tool for creating, modifying, validating and reading RO-Crates"
keywords = ["researchobject","ro-crate","ro","metadata","jsonld"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ro-crate-rs = {path = "../", version = "0.4.12"}
clap = { version = "4.5.53", features = ["derive"] }
chrono = { workspace = true }
serde_json = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
json_to_table = "0.12.0"
tabled = "0.20.0"
log = { workspace = true }

[[bin]]
name = "rocraters"  
path = "src/main.rs"
