[package]
name = "rocraters-python"
version = "0.4.8"
edition = "2021"
authors = ["Matt Burridge <m.burridge1@newcastle.ac.uk>"]
description = "Lightweight Python library for RO-Crate manipulation implemented in Rust"
license = "Apache-2.0"
keywords = ["ro-crate", "rocrate", "research object", "rocraters"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rocraters"
crate-type = ["cdylib"]

[workspace]

[dependencies]
pyo3 = "0.27.2"
serde_json = { workspace = true }
chrono = { workspace = true }
serde_with = "3.16.1"

[dependencies.ro-crate-rs]
path = "../"
version = "0"

